# azure-sphere-demo

./: CMakeLists.txt  README.md  airquality7.c  airquality7.h  app_manifest.json  avnet-ble51.c  avnet_ble51.c  avnet_ble51.h  azure_devicetwin.h  azure_dps.c  azure_dps.h  azure_exitcodes.h  azure_iothub.c  azure_iothub.h  build_options.h  click-airquality7.c  click-eth.c  click-eth.h  click-gps4.c  click-gps4.h  click-heartrate4.c  click-heartrate4.h  click-nfc4.c  click-nfc4.h  click-zigbee.c  click-zigbee.h  click_airquality7.c  click_airquality7.h  click_eth.c  click_gps4.c  click_heartrate4.c  click_heartrate4.h  click_nfc4.c  click_zigbee.c  click_zigbee.h  click_zigbee_config.h  click_zigbee_other_peripherals.h  click_zigbee_types.h  eventloop_timer_utilities.c  eventloop_timer_utilities.h  (+16 more)
AzureIoT/DPS/: connection_dps.c  options_dps.c
AzureIoT/IoTEdge/: connection_iot_edge.c
AzureIoT/IoTHub/: connection_iot_hub.c
AzureIoT/common/: CMakeLists.txt  azure_iot.c  azure_iot.h  cloud.c  cloud.h  connection.h  options.h  user_interface.c  user_interface.h
HardwareDefinitions/avnet_mt3620_sk_rev2/: demo_appliance.json
HardwareDefinitions/avnet_mt3620_sk_rev2/inc/hw/: demo_appliance.h
